--- a/stopWatch.html
+++ b/stopWatch.html
@@ -1,58 +1,72 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <script type="text/javascript" src='stopWatch.js'></script>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="stopWatch.css"/>
-    <title>StopWatch</title>
-<!--    <script>
-        window.onload = function() {
-            var stopWatch = new StopWatch();
-            stopWatch.init();
-        };
-    </script>-->
-
-<script>
-    function ready(){
-        (new StopWatch()).init();
-        alert('Page downloaded');
-    };
-    document.addEventListener("DOMContentLoaded", ready);
-</script>
-    <script>
-        window.onbeforeunload = function() {
-            return "Are you sure?";
-        };
-    </script>
-</head>
-<body>
-<div class="container">
-    <div class="panel panel-primary">
-        <div class="panel-heading">StopWatch</div>
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-xs-6 col-xs-offset-3 text-center">
-                    <div class="well well-sm text-center"><span id="resultSpan"></span></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6 col-xs-offset-3 text-center">
-                    <button type="button" class="btn btn-success" id="startBtn">Start</button>
-                    <button type="button" class="btn btn-danger" id="stopBtn">Stop</button>
-                    <button type="button" class="btn btn-warning" id="clearBtn">Clear</button>
-                    <button type="button" class="btn btn-info" id="lapBtn">Lap</button>
-                </div>
-            </div>
-            <div class="laps-block">
-                <b>Laps</b>
-                <div id="laps" class="laps-block">
-                    <span id="empty-laps">No laps added</span>
-                    <ol class="list-group" id="list"></ol>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="stopWatch.css"/>
+        <title>StopWatch</title>
+        <script src ="jquery-2.2.3.min.js"></script>
+        <script type="text/javascript" src='stopWatch.js'></script>
+        <script>
+            $(function () {
+                $('.container').stopwatch();
+            });
+        </script>
+    </head>
+    <body>
+        <div class="container" id = "stopWatch1">
+            <div class="panel panel-primary">
+                <div class="panel-heading">StopWatch</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-xs-6 col-xs-offset-3 text-center">
+                            <div class="well well-sm text-center"><span class="result-span"></span></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6 col-xs-offset-3 text-center">
+                            <button type="button" class="btn btn-success btn-start" >Start</button>
+                            <button type="button" class="btn btn-danger btn-stop">Stop</button>
+                            <button type="button" class="btn btn-warning btn-clear">Clear</button>
+                            <button type="button" class="btn btn-info btn-lap">Lap</button>
+                        </div>
+                    </div>
+                    <div class="laps-block">
+                        <b>Laps</b>
+                        <div  class="laps laps-block">
+                            <span class="empty-laps">No laps added</span>
+                            <ol class="list-group"></ol>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-</body>
+        <div class="container" id = "stopWatch2">
+            <div class="panel panel-primary">
+                <div class="panel-heading">StopWatch</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-xs-6 col-xs-offset-3 text-center">
+                            <div class="well well-sm text-center"><span class="result-span"></span></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-6 col-xs-offset-3 text-center">
+                            <button type="button" class="btn btn-success btn-start" >Start</button>
+                            <button type="button" class="btn btn-danger btn-stop">Stop</button>
+                            <button type="button" class="btn btn-warning btn-clear">Clear</button>
+                            <button type="button" class="btn btn-info btn-lap">Lap</button>
+                        </div>
+                    </div>
+                    <div class="laps-block">
+                        <b>Laps</b>
+                        <div  class="laps laps-block">
+                            <span class="empty-laps">No laps added</span>
+                            <ol class="list-group"></ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
